[lworld] TestC2CCalls segfaults in frame::sender_for_compiled_frame with ZGC

XMLWordPrintable

      # SIGSEGV (0xb) at pc=0x00007fd7ee4d5b16, pid=2028, tid=2058
      #
      # JRE version: Java(TM) SE Runtime Environment (15.0+1) (fastdebug build 15-valhalla+1-39)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-valhalla+1-39, mixed mode, tiered, z gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xaedb16] frame::sender_for_compiled_frame(RegisterMap*) const+0x56

      Current thread (0x00007fd7e844a1c0): JavaThread "MainThread" [_thread_in_Java, id=2058, stack(0x00007fd5b8ff7000,0x00007fd5b90f8000)]

      Stack: [0x00007fd5b8ff7000,0x00007fd5b90f8000], sp=0x00007fd5b90f2b20, free space=1006k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xaedb16] frame::sender_for_compiled_frame(RegisterMap*) const+0x56
      V [libjvm.so+0xaedf46] frame::sender(RegisterMap*) const+0xc6
      V [libjvm.so+0x9db1cb] Deoptimization::create_vframeArray(JavaThread*, frame, RegisterMap*, GrowableArray<compiledVFrame*>*, bool)+0x6b
      V [libjvm.so+0x9e490f] Deoptimization::fetch_unroll_info_helper(JavaThread*, int)+0x88f
      V [libjvm.so+0x9e6b54] Deoptimization::fetch_unroll_info(JavaThread*, int)+0x54
      v ~DeoptimizationBlob
      J 78 c1 TestC2CCalls$MyValue3.test9(QTestC2CCalls$MyValue3;IIIIII)QTestC2CCalls$MyValue3; (65 bytes) @ 0x00007fd7d81a1975 [0x00007fd7d81a1480+0x00000000000004f5]

      [error occurred during error reporting (printing native stack), id 0xb, SIGSEGV (0xb) at pc=0x00007fd7ee4d5b16]

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~DeoptimizationBlob
      J 78 c1 TestC2CCalls$MyValue3.test9(QTestC2CCalls$MyValue3;IIIIII)QTestC2CCalls$MyValue3; (65 bytes) @ 0x00007fd7d81a1975 [0x00007fd7d81a1480+0x00000000000004f5]

      [error occurred during error reporting (printing Java stack), id 0xb, SIGSEGV (0xb) at pc=0x00007fd7ee4d5b16]

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: