8244092: [lworld] TestC2CCalls segfaults in frame::sender_for_compiled_frame with ZGC